--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 title: Desenvolvendo com Golang
 description: Série de artigos sobre boas práticas de desenvolvimento com Golang.
-show_downloads: true
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+google_analytics:
+theme: jekyll-theme-cayman
