--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Desenvolvendo com Golang
-#description: Série de artigos sobre boas práticas de desenvolvimento com Golang.
+description: Série de artigos sobre boas práticas de desenvolvimento com Golang.
 google_analytics:
 theme: jekyll-theme-cayman
