--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Desenvolvendo com Golang
 #description: Série de artigos sobre boas práticas de desenvolvimento com Golang.
+date: 2024-12-26
 google_analytics:
 theme: jekyll-theme-cayman
