--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Desenvolvendo com Golang
 #description: Série de artigos sobre boas práticas de desenvolvimento com Golang.
+show_downloads: false
 date: 2024-12-26
 google_analytics: G-M3XVRFVQL9
 theme: jekyll-theme-cayman
