--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ show_downloads: false
 date: 2024-12-26
 google_analytics: G-M3XVRFVQL9
 theme: jekyll-theme-cayman
+github:
+  zip_url: https://github.com/jocsakesley
